--- a/app/src/main/java/MainProject/MonitorThread.form
+++ b/app/src/main/java/MainProject/MonitorThread.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="726" height="438"/>
+      <xy x="20" y="20" width="793" height="438"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -65,7 +65,9 @@
             <preferred-size width="206" height="17"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <horizontalScrollBarPolicy value="31"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="227ca" class="javax.swing.JTextArea" binding="monitorTA">
