--- a/app/src/main/java/MainProject/Graphics/MonitorThread.form
+++ b/app/src/main/java/MainProject/Graphics/MonitorThread.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="f53ea" class="javax.swing.JLabel" binding="newCheap">
+      <component id="f53ea" class="javax.swing.JLabel" binding="newCheapLabel">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
